--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+.dropdown-menu{
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 200px;
+}
+#toprow{
+  margin-top: .5em;
+  margin-bottom: 1em;
+  height: 30em;
+  width: 100%;
+}
+.navbar{
+  color: #ffffff;
+}
+.nav-link a{
+  color: white;
+  }
+.navbar-brand{
+  padding-right: 1em;
+}
+#map{
+  border: solid black;
+  height: 100%;
+  width: auto;
+}
+#mapImage{
+  width: 100%;
+  height: 100%;
+}
+.graph{
+  width: 100%;
+  height: 100%;
+}
+.statbox{
+  border: solid 2px black;
+  height: 14em;
+  margin: 1em;
+}
