fixed issue with client-server communication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-{{this.covidData.map()}}
-
+<div class="conatainer d-flex p-2">
+  <h1 class="mx-auto">{{title}}</h1>
+</div>
 <app-nav-bar></app-nav-bar>
 <app-map></app-map>
 <router-outlet></router-outlet>
