reorganized data requests and responses

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,8 @@
+<table>
+  <tr *ngFor="let state of displayData">
+    <td>{{ state }}</td>
+  </tr>
+
+</table>
+
 <div id="chart-container">FusionCharts XT will load here!</div>
