--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,88 @@
-<p>nav-bar works!</p>
+<!--Navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+  <div class="container-fluid">
+      <div class="navbar-brand border-right border-light">Map Options</div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+              <li class="nav-link" role="presentation " >
+                  <a (click)="changeCategory('positive')">Positive Cases </a>
+              </li>
+              <li class="nav-link" role="presentation ">
+                  <a (click)="changeCategory('hospitalized')">Hospitalizations</a>
+              </li>
+              <li class="nav-link" role="presentation " routerLinkActive="active" >
+                <a (click)="changeCategory('death')">Deaths</a>
+              </li>
+              <li class="nav-link" role="presentation " routerLinkActive="active" >
+                <a (click)="changeCategory('onVentilatorCurrently')">Currently On Ventilator</a>
+              </li>
+              <li class="nav-link" role="presentation " routerLinkActive="active" >
+                <a (click)="changeCategory('positiveIncrease')">Increases</a>
+              </li>
+              <!--
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      States
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" (click)="changeState('AL')">Alabama</a>
+                      <a class="dropdown-item" value="AK">Alaska</a>
+                      <a class="dropdown-item" value="AZ">Arizona</a>
+                      <a class="dropdown-item" value="AR">Arkansas</a>
+                      <a class="dropdown-item" value="CA">California</a>
+                      <a class="dropdown-item" value="CO">Colorado</a>
+                      <a class="dropdown-item" value="CT">Connecticut</a>
+                      <a class="dropdown-item" value="DE">Delaware</a>
+                      <a class="dropdown-item" value="DC">District Of Columbia</a>
+                      <a class="dropdown-item" value="FL">Florida</a>
+                      <a class="dropdown-item" value="GA">Georgia</a>
+                      <a class="dropdown-item" value="HI">Hawaii</a>
+                      <a class="dropdown-item" value="ID">Idaho</a>
+                      <a class="dropdown-item" value="IL">Illinois</a>
+                      <a class="dropdown-item" value="IN">Indiana</a>
+                      <a class="dropdown-item" value="IA">Iowa</a>
+                      <a class="dropdown-item" value="KS">Kansas</a>
+                      <a class="dropdown-item" value="KY">Kentucky</a>
+                      <a class="dropdown-item" value="LA">Louisiana</a>
+                      <a class="dropdown-item" value="ME">Maine</a>
+                      <a class="dropdown-item" value="MD">Maryland</a>
+                      <a class="dropdown-item" value="MA">Massachusetts</a>
+                      <a class="dropdown-item" value="MI">Michigan</a>
+                      <a class="dropdown-item" value="MN">Minnesota</a>
+                      <a class="dropdown-item" value="MS">Mississippi</a>
+                      <a class="dropdown-item" value="MO">Missouri</a>
+                      <a class="dropdown-item" value="MT">Montana</a>
+                      <a class="dropdown-item" value="NE">Nebraska</a>
+                      <a class="dropdown-item" value="NV">Nevada</a>
+                      <a class="dropdown-item" value="NH">New Hampshire</a>
+                      <a class="dropdown-item" value="NJ">New Jersey</a>
+                      <a class="dropdown-item" value="NM">New Mexico</a>
+                      <a class="dropdown-item" value="NY">New York</a>
+                      <a class="dropdown-item" value="NC">North Carolina</a>
+                      <a class="dropdown-item" value="ND">North Dakota</a>
+                      <a class="dropdown-item" value="OH">Ohio</a>
+                      <a class="dropdown-item" value="OK">Oklahoma</a>
+                      <a class="dropdown-item" value="OR">Oregon</a>
+                      <a class="dropdown-item" value="PA">Pennsylvania</a>
+                      <a class="dropdown-item" value="RI">Rhode Island</a>
+                      <a class="dropdown-item" value="SC">South Carolina</a>
+                      <a class="dropdown-item" value="SD">South Dakota</a>
+                      <a class="dropdown-item" value="TN">Tennessee</a>
+                      <a class="dropdown-item" value="TX">Texas</a>
+                      <a class="dropdown-item" value="UT">Utah</a>
+                      <a class="dropdown-item" value="VT">Vermont</a>
+                      <a class="dropdown-item" value="VA">Virginia</a>
+                      <a class="dropdown-item" value="WA">Washington</a>
+                      <a class="dropdown-item" value="WV">West Virginia</a>
+                      <a class="dropdown-item" value="WI">Wisconsin</a>
+                      <a class="dropdown-item" value="WY">Wyoming</a>
+                  </div>
+              </li>-->
+          </ul>
+
+      </div>
+  </div>
+</nav>
