--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,3 @@
-<table>
-  <tr *ngFor="let state of displayData">
-    <td>{{ state }}</td>
-  </tr>
-
-</table>
+<div>{{this.category}}</div>
 
 <div id="chart-container">FusionCharts XT will load here!</div>
