further refined data sent to map

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
                   <a (click)="changeCategory('positive')">Positive Cases </a>
               </li>
               <li class="nav-link" role="presentation ">
-                  <a (click)="changeCategory('hospitalized')">Hospitalizations</a>
+                  <a (click)="changeCategory('hospitalizedCurrently')">Hospitalizations</a>
               </li>
               <li class="nav-link" role="presentation " routerLinkActive="active" >
                 <a (click)="changeCategory('death')">Deaths</a>
