--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,4 @@
 <div>{{this.category}}</div>
+<div id="mapData">{{ this.displayData }}</div>
 
 <div id="chart-container">FusionCharts XT will load here!</div>
