set data values for states on map

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
 <div>{{this.category}}</div>
-<div id="mapData">{{ this.displayData }}</div>
+<input type="hidden" id="mapData" value="{{this.displayData}}" >
 
 <div id="chart-container">FusionCharts XT will load here!</div>
